--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Hitchhiker's Guide to the Ethereumverse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="https://ethereum.org/static/6f05d59dc633140e4b547cb92f22e781/a7715/eth-diamond-purple-white.jpg"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -131,7 +132,7 @@
 									<h2>Sponsors and Partners</h2>
 									<h3><strong> Hitchiker's Guide to the Ethereumverse is made possible by our partners and sponsors</strong></h3>
 									<p>Funded by: Ethereum Foundation's Road to Devcon Grants</p>
-									<span class="image"><img src="images/ETH-RTD-badge-lightblue-darkblue.png" alt="" width="200" height="200" style="display:block"></span>
+									<span class="image"><img src="images/ETH-RTD-badge-colorful-darkblue.png" alt="" width="200" height="200" style="display:block"></span>
 									<p>Brought to you in partnership with</p>
 									<span class="image"><img src="images/infineon-and-tribe-join-hands-to-strengthen-singapores-blockchain-ecosystem-2.jpg" width="300" height="92.5" alt="" style="display:block"></span>
 								</header>
