--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 							</ul>
 						</section>
-						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
+						<p class="copyright">&copy; Hitchhiker's Guide to the Ethereumverse. Illustrations from: <a href="https://ethereum.org/en/assets/">ethereum.org</a>.</p>
 					</footer>
 
 			</div>
